* Position Relative con column-day

--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,7 @@ body {
 	border-right:1px solid #ccc;
 	text-align:center;
 	width: 0.1428571429%;
+	position: relative;
 }
 
 .column-day .schedules {
